retirando  index.html e projetos.html de dentro da pasta web

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <ul class="menu-lista">
         <li class="botoes-menu"><a href="./index.html" class="link">Home</a></li>
         <li class="botoes-menu"><a href="./projetos.html" class="link">Projetos</a></li>
-        <li class="botoes-menu"><a href="" class="link">Contato</a></li>
+        <li class="botoes-menu"><a href="" class="link">Contatos</a></li>
       </ul>
     </nav>
   </header>
@@ -24,7 +24,7 @@
       <h1 class="titulo">Quem Sou Eu?</h1>
     </section>
     <section class="containerFoto">
-      <img src="../img/steph.jpg" alt="" class="foto">
+      <img src="../img/WhatsApp Image 2024-02-01 at 19.16.56.jpeg" alt="" class="foto">
     </section>
     <section>
       <p>Olá, meu nome é Jean Pires</p>
