--- a/projetos.html
+++ b/projetos.html
@@ -15,7 +15,7 @@
       <ul class="menu-lista">
         <li class="botoes-menu"><a href="./index.html" class="link">Home</a></li>
         <li class="botoes-menu"><a href="./projetos.html" class="link">Projetos</a></li>
-        <li class="botoes-menu"><a href="" class="link">Contato</a></li>
+        <li class="botoes-menu"><a href="" class="link">Contatos</a></li>
       </ul>
     </nav>
   </header>
