apontando style.css e projeto.css para estilização da página

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="icon" href="../img/">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" href="./img/">
   <title>Jean Pires</title>
 </head>
 
@@ -24,7 +24,7 @@
       <h1 class="titulo">Quem Sou Eu?</h1>
     </section>
     <section class="containerFoto">
-      <img src="../img/WhatsApp Image 2024-02-01 at 19.16.56.jpeg" alt="" class="foto">
+      <img src="./img/WhatsApp Image 2024-02-01 at 19.16.56.jpeg" alt="" class="foto">
     </section>
     <section>
       <p>Olá, meu nome é Jean Pires</p>
