--- a/projetos.html
+++ b/projetos.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/projetos.css">
-  <link rel="icon" href="../img/">
+  <link rel="stylesheet" href="./css/projetos.css">
+  <link rel="icon" href="./img/">
   <title>Jean Pires</title>
 </head>
 
@@ -24,7 +24,7 @@
       <h1 class="titulo">Projetos:</h1>
     </section>
     <section>
-      <h2>Portifólio</h2>
+      <h2>Portfólio</h2>
     </section>
     <div>
     <img src="../img/projetos.gif" alt="">
