alterando o fundo e as paletas de cores

--- a/projetos.html
+++ b/projetos.html
@@ -27,7 +27,7 @@
       <h2>Portfólio</h2>
     </section>
     <div>
-    <img src="../img/projetos.gif" alt="">
+    <img src="./img/projetos.gif" alt="">
   </div>
   <footer>
     <p></p>
