Adicionando a página de contatos e os icones das redes sociais

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <header class="cabecalho">
     <nav class="menu">
       <ul class="menu-lista">
-        <li class="botoes-menu"><a href="./index.html" class="link">Home</a></li>
-        <li class="botoes-menu"><a href="./projetos.html" class="link">Projetos</a></li>
-        <li class="botoes-menu"><a href="" class="link">Contatos</a></li>
+        <li><a href="./index.html" class="link-menu">Home</a></li>
+        <li><a href="./projetos.html" class="link-menu">Projetos</a></li>
+        <li><a href="./contatos.html" class="link-menu">Contatos</a></li>
       </ul>
     </nav>
   </header>
