--- a/projetos.html
+++ b/projetos.html
@@ -13,21 +13,18 @@
   <header class="cabecalho">
     <nav class="menu">
       <ul class="menu-lista">
-        <li class="botoes-menu"><a href="./index.html" class="link">Home</a></li>
-        <li class="botoes-menu"><a href="./projetos.html" class="link">Projetos</a></li>
-        <li class="botoes-menu"><a href="" class="link">Contatos</a></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./projetos.html">Projetos</a></li>
+        <li><a href="./contatos.html">Contatos</a></li>
       </ul>
     </nav>
   </header>
   <main class="conteudoPrin">
     <section>
-      <h1 class="titulo">Projetos:</h1>
+      <h2>Meu Portfólio: <a href="https://jeanpiresm.github.io/Portfolio/" class="link">https://jeanpiresm.github.io/Portfolio/</a></h2>
     </section>
-    <section>
-      <h2>Portfólio</h2>
-    </section>
-    <div>
-    <img src="./img/projetos.gif" alt="">
+    <div class="emBreve">
+    <img src="./img/issoetd.gif" alt="">
   </div>
   <footer>
     <p></p>
