Adicionando a logo do Whatsapp, adicionando o rodape da página

--- a/projetos.html
+++ b/projetos.html
@@ -21,11 +21,8 @@
   </header>
   <main class="conteudoPrin">
     <section>
-      <h2>Meu Portfólio: <a href="https://jeanpiresm.github.io/Portfolio/" class="link">https://jeanpiresm.github.io/Portfolio/</a></h2>
+      <h2>Meu Portfólio(Este Portfolio): <a href="https://jeanpiresm.github.io/Portfolio/" class="link">https://jeanpiresm.github.io/Portfolio/</a></h2>
     </section>
-    <div class="emBreve">
-    <img src="./img/issoetd.gif" alt="">
-  </div>
   <footer>
     <p></p>
   </footer>
