--- a/contatos.html
+++ b/contatos.html
@@ -20,29 +20,25 @@
     </nav>
   </header>
   <main class="conteudoPrin">
-    <div class="linkedin"> 
-      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" />
-      <p>Linkedin</p>
+    <div class="WhatsApp">
+      <a href="https://api.whatsapp.com/send?phone=5524992508589" target="_blank"><img src="./img/WhatsApp.svg.webp" alt="WhatsApp logo">WhatsApp</a>
     </div>
-    <div class="facebook">
-      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/facebook/facebook-original.svg"/>
-      <p>Facebook</p>
+    <div class="linkedin">
+      <a href="https://www.linkedin.com/in/jean-pires-aa4796279/" target="_blank"> <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" />Linkedin</a>
     </div>
     <div class="github">
-      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg"/>
-      <p>Github</p>
+      <a href="https://github.com/JeanPiresM" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" />Github</a>
     </div>
     <div class="ig">
-      <img src="./img/icons8-instagram.svg" alt="">
-      <p >Instagram</p>
+      <a href="https://www.instagram.com/jean.pires.397/" target="_blank"><img src="./img/icons8-instagram.svg" alt="">Instagram</a>
     </div>
     <div class="email">
       <img src="./img/icons8-gmail-logo.svg" alt="">
-      <p>Email</p>
+      <a href="mailto:jeanpires223@gmail.com?subject=&body=" target="_blank">Email</a>
     </div>
   </main>
-    <footer>
-    </footer>
+  <footer>
+  </footer>
 </body>
 
 </html>
