--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
     <section class="containerFoto">
       <img src="./img/WhatsApp Image 2024-02-01 at 19.16.56.jpeg" alt="" class="foto">
     </section>
-    <section>
-      <p>Olá, meu nome é Jean Pires</p>
+    <section class="paragrafo">
+      <p>Olá, meu nome é Jean Pires Moreira dos Santos, estudante de programação. Atualmente, estou participando da Residência em TIC do Serratec em parceria com o Senai, onde já adquiri conhecimentos em linguagens como HTML, CSS e TypeScript. Sou uma pessoa extremamente esforçada e dedicada, sempre em busca de aprimoramento. Estou disponível para colaborar e contribuir no que for necessário. Caso precise de minha ajuda, por favor, não hesite em entrar em contato.</p>
     </section>
-
   </main>
-
-  <footer>
+  <footer class="rodape">
     <p></p>
+    <p class="texto_pequeno">Site desenvolvido com Html/Css</p>
   </footer>
 </body>
 
