Atualizando o portfolio e fazendo ficar responsivo

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <nav class="menu">
       <ul class="menu-lista">
         <li><a href="./index.html" class="link-menu">Home</a></li>
-        <li><a href="./projetos.html" class="link-menu">Projetos</a></li>
-        <li><a href="./contatos.html" class="link-menu">Contatos</a></li>
+        <li><a href="https://github.com/JeanPiresM" class="link-menu" target="_blank">Projetos</a></li>
+        <li><a href="https://api.whatsapp.com/send?phone=5524992508589" class="link-menu" target="_blank">Contato</a></li>
       </ul>
     </nav>
   </header>
@@ -24,14 +24,14 @@
       <h1 class="titulo">Quem Sou Eu?</h1>
     </section>
     <section class="containerFoto">
-      <img src="./img/WhatsApp Image 2024-02-01 at 19.16.56.jpeg" alt="" class="foto">
+      <img src="./img/WhatsApp Image 2024-02-01 at 19.16.56.jpeg" alt="">
     </section>
     <section class="paragrafo">
-      <p>Olá, meu nome é Jean Pires Moreira dos Santos, estudante de programação. Atualmente, estou participando da Residência em TIC do Serratec em parceria com o Senai, onde já adquiri conhecimentos em linguagens como HTML, CSS e TypeScript. Sou uma pessoa extremamente esforçada e dedicada, sempre em busca de aprimoramento. Estou disponível para colaborar e contribuir no que for necessário. Caso precise de minha ajuda, por favor, não hesite em entrar em contato.</p>
+      <p>Olá, meu nome é Jean Pires Moreira dos Santos, estou estudando para me tornar um Desevolvedor Full-Stack. Atualmente, estou participando da Residência em TIC do Serratec em parceria com o Senac, onde já adquiri conhecimentos em linguagens como HTML, CSS e TypeScript. Sou uma pessoa extremamente esforçada e dedicada, sempre em busca de aprimoramento. Estou disponível para colaborar e contribuir no que for necessário. Caso precise de minha ajuda, por favor, não hesite em entrar em contato.</p>
     </section>
   </main>
   <footer class="rodape">
-    <p></p>
+    <p>Copyright © 2024 Jean Pires - Todos os direitos reservados.</p>
     <p class="texto_pequeno">Site desenvolvido com Html/Css</p>
   </footer>
 </body>
